[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/background/background-ashland.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/menus/Home.gd" type="Script" id=2]
[ext_resource path="res://addons/logger/log_base.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logger" type="Node" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Logger V1.2 ApolloX"
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 334.291, 307.25 )
scale = Vector2( 0.599121, 0.599121 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 607.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 358.0
margin_top = 154.0
margin_right = 666.0
margin_bottom = 454.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="CenterContainer" parent="CenterContainer/HBoxContainer"]
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="menu" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 304.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="top" type="CenterContainer" parent="CenterContainer/HBoxContainer/menu"]
margin_right = 300.0

[node name="title" type="ColorRect" parent="CenterContainer/HBoxContainer/menu"]
margin_top = 4.0
margin_right = 300.0
margin_bottom = 54.0
rect_min_size = Vector2( 300, 50 )
color = Color( 0, 0, 0, 0.607843 )

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/menu/title"]
margin_right = 300.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ARATOR"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="CenterContainer/HBoxContainer/menu"]
margin_top = 58.0
margin_right = 300.0
margin_bottom = 78.0
size_flags_horizontal = 3
text = "Start"

[node name="title2" type="ColorRect" parent="CenterContainer/HBoxContainer/menu"]
margin_top = 82.0
margin_right = 300.0
margin_bottom = 132.0
rect_min_size = Vector2( 300, 50 )
color = Color( 0, 0, 0, 0.607843 )

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/menu/title2"]
margin_right = 300.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Multiplayer"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multi-create" type="Button" parent="CenterContainer/HBoxContainer/menu"]
margin_top = 136.0
margin_right = 300.0
margin_bottom = 156.0
size_flags_horizontal = 3
text = "Create Server"

[node name="multi-join" type="HBoxContainer" parent="CenterContainer/HBoxContainer/menu"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 184.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="CenterContainer/HBoxContainer/menu/multi-join"]
margin_right = 232.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 1
placeholder_text = "127.0.0.1"

[node name="Button" type="Button" parent="CenterContainer/HBoxContainer/menu/multi-join"]
margin_left = 236.0
margin_right = 300.0
margin_bottom = 24.0
text = "Connect"

[node name="quit" type="Button" parent="CenterContainer/HBoxContainer/menu"]
margin_top = 188.0
margin_right = 300.0
margin_bottom = 208.0
size_flags_horizontal = 3
text = "Quit"

[node name="version" type="Label" parent="CenterContainer/HBoxContainer/menu"]
margin_top = 212.0
margin_right = 300.0
margin_bottom = 226.0
align = 1
valign = 1

[node name="right" type="CenterContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 308.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="CenterContainer/HBoxContainer/menu/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/menu/multi-create" to="." method="_on_game_multi_create_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/menu/multi-join/Button" to="." method="_on_game_multi_join_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/menu/quit" to="." method="_on_quit_pressed"]
